# screenshooter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
screenshooter/: __init__.py  app.py  cache.py  config.py  di.py  errors.py  routes.py  schemas.py  screenshot.py
