[tool.poetry]
name = "screenshooter"
version = "0.1.0"
description = ""
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
pyppeteer = "^0.2.5"
uvicorn = "^0.13.4"
sentry-sdk = "^1.0.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^21.9b0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
